--- a/index_styles.css
+++ b/index_styles.css
@@ -32,24 +32,44 @@ header {
   z-index: 1;
   width: 100%;
   height: 200px;
-  border-top: 10px solid #42210b;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding-top: 30px;
 }
 
 .header__inner {
   height: 100%;
   position: relative;
-  width: 90%;
-  max-width: 600px;
   margin: 0 auto;
 }
 
-h1 {
-  position: relative;
+.header__subtitle {
   width: 100%;
-  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #42210b;
+  padding: 3px 10px 0 0;
+  text-align: right;
+}
+
+.header__subtitle small {
+  color: white;
+  font-size: 0.8em;
+}
+
+h1 {
+  position: absolute;
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
+  height: calc(100% - 60px);
+  top: 60px;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
 }
 
 h1 a {
@@ -62,7 +82,7 @@ h1 a {
   background-image: url(images/index_mainlogo.png);
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center bottom;
+  background-position: center top;
 }
 
 img {
