index_styles「トップページ」サブタイトルのサイズ変更

--- a/index_styles.scss
+++ b/index_styles.scss
@@ -58,6 +58,7 @@ $attention-color: rgb(253, 164, 161);
 
 html {
     font-size: 62.5%;
+    overflow-y: scroll;
 }
 
 body {
@@ -93,28 +94,29 @@ header {
     margin: 0 auto;
 
 }
-    .header__subtitle {
-    width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-    height: 30px;
-    box-sizing: border-box;
-    background-color: $header-color;
-    padding: 3px 10px 0 0;
-    text-align: right;
-    small {
-    color: $white-color;
-    font-size: 0.8em;
-    }
-    }
+.header__subtitle {
+width: 100%;
+position: relative;
+top: 0;
+left: 0;
+height: 20px;
+line-height: 1.2;
+box-sizing: border-box;
+background-color: $header-color;
+padding: 0 10px 0 0;
+text-align: right;
+small {
+color: $white-color;
+font-size: 0.8em;
+}
+}
 h1 {
     position: absolute;
     width: 90%;
     max-width: 600px;    
     margin: 0 auto;
-    height: calc(100% - 60px);
-    top: 60px;
+    height: calc(100% - 50px);
+    top: 50px;
     left: 50%;
     transform: translate(-50%,0);
     a {
