--- a/index_styles.css
+++ b/index_styles.css
@@ -5,6 +5,7 @@
 
 html {
   font-size: 62.5%;
+  overflow-y: scroll;
 }
 
 body {
@@ -47,11 +48,12 @@ header {
   position: relative;
   top: 0;
   left: 0;
-  height: 30px;
+  height: 20px;
+  line-height: 1.2;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-color: #42210b;
-  padding: 3px 10px 0 0;
+  padding: 0 10px 0 0;
   text-align: right;
 }
 
@@ -65,8 +67,8 @@ h1 {
   width: 90%;
   max-width: 600px;
   margin: 0 auto;
-  height: calc(100% - 60px);
-  top: 60px;
+  height: calc(100% - 50px);
+  top: 50px;
   left: 50%;
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
