--- a/css/styles.scss
+++ b/css/styles.scss
@@ -151,20 +151,35 @@ header {
     margin: 0 auto;
     background-color: $grayrgba-color;
     width: 100%;
-    height: 65px;
+    height: 85px;
     z-index: 1;
-    border-top: 10px solid $header-color;
+    box-sizing: border-box;
 }
 
 .header__inner {
     display: flex;
     justify-content: space-between;
     position: relative;
-    width: calc(100% - 30px);
+    // width: calc(100% - 30px);
     margin: 0 auto;
     padding-top: 5px;
 }
-
+.header__subtitle {
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 20px;
+    box-sizing: border-box;
+    background-color: $header-color;
+    padding: 0 10px 0 0;
+    text-align: right;
+    line-height: 1.2;
+    small {
+    color: $white-color;
+    font-size: 0.8em;
+    }
+    }
 h1 {
     position: relative;
     a {
