--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ header {
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: relative;
+  width: calc(100% - 30px);
   margin: 0 auto;
   padding-top: 5px;
 }
@@ -394,6 +395,9 @@ h3 {
   margin-bottom: 30px;
   text-align: center;
   color: #4d3118;
+  background-image: url(../images/h3_bg.png);
+  background-position: center bottom;
+  background-repeat: repeat-x;
 }
 
 h4 {
@@ -847,9 +851,12 @@ main {
 }
 
 h3.h3login {
-  padding-top: 10px;
-  margin-bottom: 50px;
-  font-size: 1.1em;
+  padding-top: 7px !important;
+  margin-bottom: 20px !important;
+  font-size: 1.1em !important;
+  padding-left: 0 !important;
+  padding-bottom: 10px !important;
+  background-position: center bottom !important;
 }
 
 .mem main,
@@ -866,7 +873,6 @@ h3.h3login {
           box-shadow: 1px 1px 3px #b4b4b4;
   padding-bottom: 20px;
   border-radius: 0 0 10px 10px;
-  background-image: url(../images/h3_bg.png);
   background-repeat: repeat-x;
 }
 
