--- a/css/styles.scss
+++ b/css/styles.scss
@@ -160,7 +160,7 @@ header {
     display: flex;
     justify-content: space-between;
     position: relative;
-    // width: calc(100% - 30px);
+    width: calc(100% - 30px);
     margin: 0 auto;
     padding-top: 5px;
 }
@@ -449,6 +449,9 @@ h3 {
     margin-bottom: 30px;
     text-align: center;
     color: $h3-txtcolor;
+    background-image: url(../images/h3_bg.png);
+    background-position: center bottom;
+    background-repeat: repeat-x;
 }
 .mem h3 {
     // text-align: left;
@@ -783,9 +786,13 @@ main {
     }
 }
 h3.h3login {
-    padding-top: 10px;
-    margin-bottom: 50px; 
-    font-size: 1.1em; 
+    padding-top: 7px !important;
+    margin-bottom: 20px !important; 
+    font-size: 1.1em !important; 
+    padding-left: 0 !important;
+    padding-bottom: 10px !important;
+    background-position: center bottom !important;
+    
    
 }
 .mem main,
@@ -798,7 +805,7 @@ h3.h3login {
         box-shadow: 1px 1px 3px $shadow-color;
         padding-bottom: 20px;
         border-radius: 0 0 10px 10px;
-        background-image: url(../images/h3_bg.png);
+        // background-image: url(../images/h3_bg.png);
         background-repeat: repeat-x;
         
     }
