--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1374,7 +1374,8 @@ body.adm {
 }
 #adm {
     h3 {
-        background-color: $grayrgba-color;
+        padding-bottom: 9px;
+        padding-top: 2px;
    
     }
     h3.err {
