--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,12 @@ h2 {
 
 .adm .row {
   padding-bottom: 0 !important;
+  background-image: url(../images/h3_bg.png);
+  background-repeat: repeat-x;
+}
+
+.adm h3 {
+  background-image: url();
 }
 
 .adm section.sec__02 {
@@ -398,6 +404,10 @@ h3 {
   background-image: url(../images/h3_bg.png);
   background-position: center bottom;
   background-repeat: repeat-x;
+}
+
+h3.h3_logout {
+  padding-bottom: 8px;
 }
 
 h4 {
