--- a/index_styles.css
+++ b/index_styles.css
@@ -81,7 +81,7 @@ h1 a {
   height: 100%;
   position: relative;
   width: 100%;
-  background-image: url(images/index_mainlogo.png);
+  background-image: url(images/index_mainlogo.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center top;
@@ -135,6 +135,14 @@ form input {
   font-family: 'Heebo', 'Noto Sans JP', sans-serif;
   color: #464442;
   margin-bottom: 0;
+}
+
+form input:focus {
+  outline: 0;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 0px 8px #66c7bf;
+          box-shadow: 0px 0px 8px #66c7bf;
 }
 
 form [type=submit] {
